--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,10 @@ POSTGRES_PASSWORD=yourdbpassword
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
+# pgAdmin settings
+PGADMIN_DEFAULT_EMAIL=example@examle.com 
+PGADMIN_DEFAULT_PASSWORD=yourEmailPassword
+
 # Django settings
 SECRET_KEY=yoursecretkey
+POSTGRES_DOCKER_DB=db
