User sign up added

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # PostgreSQL settings
-POSTGRES_DB=yourdbname
+POSTGRES_DB=yourdb
 POSTGRES_USER=yourdbuser
 POSTGRES_PASSWORD=yourdbpassword
 POSTGRES_HOST=localhost
@@ -7,3 +7,8 @@ POSTGRES_PORT=5432
 
 # Django settings
 SECRET_KEY=yoursecretkey
+
+#Email settings
+EMAIL_HOST = youremailhost
+EMAIL_HOST_USER = youremailhostuser
+EMAIL_HOST_PASSWORD = youremailhostpassword
