--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,6 @@ EMAIL_HOST = youremailhost
 EMAIL_HOST_USER = youremailhostuser
 EMAIL_HOST_PASSWORD = youremailhostpassword
 
-
+#Logging settings
+LOG_LEVEL=INFO
+LOG_FILE=somefile.log
