--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,7 @@ typing_extensions==4.9.0
 tzdata==2024.1
 zxcvbn==4.4.28
 coverage==7.4.2
+pymongo[srv]==3.12.0
+pydantic==2.6
+celery==5.3.6
+redis==5.0.1
