add logger env variables to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,10 @@ services:
       - EMAIL_HOST=${EMAIL_HOST}
       - EMAIL_HOST_USER=${EMAIL_HOST_USER}
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
-      - LOG_LEVEL=${LOG_LEVEL}
-      - LOG_FILE=${LOG_FILE}
+      - INFO_LOG_LEVEL=${INFO_LOG_LEVEL}
+      - INFO_LOG_FILE=${INFO_LOG_LEVEL}
+      - ERROR_LOG_LEVEL=${ERROR_LOG_LEVEL}
+      - ERROR_LOG_FILE=${ERROR_LOG_FILE}
       - MONGO_URL=${MONGO_URL}
       - MONGO_DATABASE=${MONGO_DATABASE}
       - REDIS_URL=${REDIS_URL}
